Fixed hero section not showing.

--- a/_codux/boards/seccion-hero.board.module.scss
+++ b/_codux/boards/seccion-hero.board.module.scss
@@ -6,11 +6,11 @@
     position: absolute;
     left: 610px;
     width: 410px;
-    top: 40px;
+    top: 140px;
 }
 .img2 {
     position: absolute;
-    top: 20px;
+    top: 120px;
     width: 256px;
     height: 124.19px;
     left: 0px;
@@ -33,7 +33,7 @@
     color: #3c2683;
     font-family: Inter;
     left: 5px;
-    top: 165px;
+    top: 265px;
 }
 
 .modalOverlay {
